# This is the top level CMakeLists.txt file - it can be used to store
# project wide settings and adding top level subdirectories.
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# Project & CMake setup
SET(CMAKE_VERBOSE_MAKEFILE TRUE)

PROJECT(dnsw)

SET(PROJECT_MAJOR_VERSION 1)
SET(PROJECT_MINOR_VERSION 1)
SET(PROJECT_VERSION ${PROJECT_MAJOR_VERSION}.${PROJECT_MINOR_VERSION})

CONFIGURE_FILE("${PROJECT_SOURCE_DIR}/dnsw_config.h.in" 
			   "${PROJECT_BINARY_DIR}/dnsw_config.h")
			   
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")

SET(DNSW_INCLUDES "${PROJECT_SOURCE_DIR}/src/dnsw/include")

# Build settings
SET(CMAKE_CXX_COMPILER "clang++")
SET(CMAKE_C_COMPILER "clang")

SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -Werror -pedantic")

SET(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG} -g)
SET(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE} -O3)

# Add the subdirectories to descend into
ADD_SUBDIRECTORY(src)
